try to fix banner on mobile

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -130,7 +130,9 @@ ul.buttons {
 
 #banner {
 	background-image: url("images/light-bl.svg"), url("images/light-br.svg"), url("images/overlay.png"), url("../images/banner_mobile.jpg");
-	background-size: 10em, 10em, auto, cover;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
 	padding: 6em 0;
 }
 
